--- a/css/responsive.css
+++ b/css/responsive.css
@@ -761,7 +761,7 @@
     }
 
     .switcher__text {
-        font-size: 10px;
+        font-size: 14px;
     }
 }
 
